# garland

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  deepspeed.local_offload.cfg  publish_sota.sh  setup-research.cfg  setup.cfg  zero_nvme_offload.json  zero_stage3_offload_config.json  zero_stage3_offload_config_fp16.json
cai_garland/cli/: retranslate.py  translate.py
cai_garland/cli/translate.config/: config.yaml  retranslate.yaml  translate.yaml
cai_garland/data/: context_collator.py  context_injection_dataset.py  dataset_infos.json  parallel_dataset_loader_hf.py  parallel_dataset_prep.py  parallel_dataset_sequencing.py  segmentation_dataset_prep.py  siamese_collator.py  synthetic_nllb_data.py
cai_garland/data/dataset_prep.config/: parallel_dataset_prep.yaml  symbol_cleaning_bo.json  symbol_cleaning_en.json  symbol_cleaning_en_no_skip.json  synthetic_nllb_data.yaml
cai_garland/data/parallel_dataset_prep.config/: config.yaml  symbol_cleaning.json
cai_garland/models/: bilingual_tokenizer.py  cai_encoder_decoder.py  cai_nllb_tokenizer.py  factory.py  pooled_context_decoder.py  pooled_context_decoder_bart.py  pooled_context_decoder_m2m.py  siamese_encoder.py
cai_garland/training/: cai_trainer_seq2seq.py  segmenter.py  train_nmt.py
cai_garland/utils/: segmenters.py  str_processors.py  translator.py
notebooks/: Aligner.ipynb  BLEU.ipynb  Basic text statistics.ipynb  Bitext template mining.ipynb  Concatenation.ipynb  English cleaning.ipynb  Generation inspection.ipynb  NLLB.ipynb  Parallel text mining.ipynb  Translation evaluation.ipynb
(+161 files in other folders)
