[metadata]
name = compassionai-garland
version = 0.1.0
author = CompassionAI
author_email = contact@compassion-ai.org
description = CompassionAI Project Garland - machine translation for classical Tibetan
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/compassionai/garland
project_urls =
    Bug Tracker = https://github.com/compassionai/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = cai_garland
python_requires = >=3.6
install_requires =
    torch>=1.12.1
    transformers>=4.23.1
    sentencepiece>=0.1.96
    scikit-learn>=1.1.2
    hydra-core>=1.2.0
    hydra-colorlog>=1.2.0
    colorama>=0.4.5